# OpenGL-3DViewer

./: README.md
Code/: 3Dstudio.h  CMakeCache.txt  CMakeLists.txt  Camera.h  Engine.cpp  Engine.h  Makefile  Proj  Proj.cbp  cmake_install.cmake  fragment_core.glsl  libs.h  lights.h  main.cpp  mesh.h  model.h  objLoader.h  objectLoader.cpp  openglwindow.cpp  openglwindow.h  primitives.h  shader.h  vertex.h  vertex_core.glsl
Code/glad/include/glad/: glad.h
Code/glad/src/: glad.c
Code/glfw-3.3.2/: CMakeCache.txt  GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
Code/glfw-3.3.2/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
Code/glfw-3.3.2/src/: Makefile  cmake_install.cmake
Code/glfw-3.3.2/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
